--- a/package.json
+++ b/package.json
@@ -1,31 +1,44 @@
 {
-    "name": "FrontS",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "build": "./node_modules/.bin/webpack",
-        "start": "npm run build && node server.ts",
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "express": "^4.17.1",
-        "react": "^16.13.0",
-        "react-dom": "^16.13.0",
-        "typescript": "^3.8.3"
-    },
-    "devDependencies": {
-        "@types/react": "^16.9.23",
-        "@types/react-dom": "^16.9.5",
-        "html-webpack-plugin": "^3.2.0",
-        "source-map-loader": "^0.2.4",
-        "ts-loader": "^6.2.1",
-        "webpack": "^4.42.0",
-        "webpack-cli": "^3.3.11",
-        "webpack-dev-middleware": "^3.7.2",
-        "webpack-hot-middleware": "^2.25.0"
-    }
+  "name": "FrontS",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "build": "./node_modules/.bin/webpack",
+    "start": "npm run build && node server.ts",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.17.1",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
+    "typescript": "^3.8.3"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.8.6",
+    "@babel/plugin-transform-runtime": "^7.8.3",
+    "@babel/preset-env": "^7.8.6",
+    "@babel/preset-react": "^7.8.3",
+    "@babel/preset-typescript": "^7.8.3",
+    "@types/react": "^16.9.23",
+    "@types/react-dom": "^16.9.5",
+    "babel-loader": "^8.0.6",
+    "css": "^2.2.4",
+    "fibers": "^4.0.2",
+    "html-webpack-plugin": "^3.2.0",
+    "loader": "^2.1.1",
+    "node-sass": "^4.13.1",
+    "sass": "^1.26.2",
+    "sass-loader": "^8.0.2",
+    "source-map-loader": "^0.2.4",
+    "style-loader": "^1.1.3",
+    "ts-loader": "^6.2.1",
+    "webpack": "^4.42.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-middleware": "^3.7.2",
+    "webpack-hot-middleware": "^2.25.0"
+  }
 }
