--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/node": "^13.9.2",
     "express": "^4.17.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
