--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/react-dom": "^16.9.5",
     "babel-loader": "^8.0.6",
     "css": "^2.2.4",
+    "css-loader": "^3.5.0",
     "fibers": "^4.0.2",
     "html-webpack-plugin": "^3.2.0",
     "loader": "^2.1.1",
