--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "^4.10.0",
     "@types/node": "^13.9.2",
     "express": "^4.17.1",
     "react": "^16.13.0",
@@ -32,7 +33,7 @@
     "fibers": "^4.0.2",
     "html-webpack-plugin": "^3.2.0",
     "loader": "^2.1.1",
-    "node-sass": "^4.13.1",
+    "node-sass": "^4.14.1",
     "sass": "^1.26.2",
     "sass-loader": "^8.0.2",
     "source-map-loader": "^0.2.4",
