--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.5",
     "babel-loader": "^8.0.6",
+    "babel-plugin-import": "^1.13.0",
     "css": "^2.2.4",
     "css-loader": "^3.5.0",
     "fibers": "^4.0.2",
