--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@material-ui/core": "^4.10.0",
     "@material-ui/icons": "^4.9.1",
     "@types/node": "^13.9.2",
+    "@types/react-router-dom": "^5.1.5",
     "express": "^4.17.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-redux": "^7.2.0",
+    "react-router-dom": "^5.2.0",
     "typescript": "^3.8.3"
   },
   "devDependencies": {
@@ -28,6 +31,7 @@
     "@babel/preset-typescript": "^7.8.3",
     "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.5",
+    "@types/react-redux": "^7.1.9",
     "babel-loader": "^8.0.6",
     "babel-plugin-import": "^1.13.0",
     "css": "^2.2.4",
