--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
   "dependencies": {
     "@material-ui/core": "^4.10.0",
     "@material-ui/icons": "^4.9.1",
+    "@types/immutable": "^3.8.7",
     "@types/node": "^13.9.2",
     "@types/react-router-dom": "^5.1.5",
+    "@types/redux": "^3.6.0",
+    "@types/redux-logger": "^3.0.8",
+    "@types/redux-thunk": "^2.1.0",
     "express": "^4.17.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
