--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^16.13.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
+    "redux-logger": "^3.0.6",
     "typescript": "^3.8.3"
   },
   "devDependencies": {
